@@ -1,7 +1,18 @@
 AC_INIT([cmetrics],[0.1], [libresoft-tools-devel@lists.morfeo-project.org])
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_INIT_AUTOMAKE([1.9])
+
 AC_PROG_CC
+AM_PROG_CC_STDC
+AC_HEADER_STDC
 AC_PROG_AWK
 AM_PROG_LEX
-AC_CONFIG_FILES([Makefile mccabe/Makefile halstead/Makefile kdsi/Makefile utils/Makefile])
+
+AC_CONFIG_FILES([
+Makefile 
+mccabe/Makefile 
+halstead/Makefile 
+kdsi/Makefile 
+utils/Makefile
+])
+
 AC_OUTPUT
